# leagueintel

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: secrets.example
.github/workflows/: refresh.yml  test.yml
.streamlit/: secrets.toml.example
scripts/: cache_benchmark.py  migrate_db.py  migrate_ghost_weeks.py  usage_report.py
src/leagueintel/: __init__.py  cli.py  config.py
src/leagueintel/analytics/: availability.py  consolation.py  draft.py  head_to_head.py  standings.py  waiver.py
src/leagueintel/ingestion/: espn.py  parse.py
src/leagueintel/reporting/: chatbot.py  consolation_card.py  dashboard.py  home.py  playoff_bracket.py  turso_client.py
src/leagueintel/reporting/pages/: 1_💬_Chat.py  2_Chat.py  2_📊_Draft_ROI.py  3_📈_Best_Waiver.py  4_🏈_Season_Overview.py  5_⚔️_Head_to_Head.py  Best_Waiver.py  Chat.py  Draft_ROI.py  Head_to_Head.py  Podium.py  Season_Overview.py
src/leagueintel/storage/: database.py  views.py  writer.py
tests/analytics/: test_availability.py  test_consolation.py  test_draft.py  test_head_to_head.py  test_standings.py  test_waiver.py
tests/ingestion/: test_espn.py
tests/reporting/: test_chatbot_throttling.py  test_turso_client.py
tests/storage/: test_database.py
