[tool.poetry]
name = "leagueintel"
version = "0.3.0"
description = "Fantasy football league-specific analytics and competitive intelligence"
authors = ["Jonathan Cheng <jonchengw@gmail.com>"]
readme = "README.md"
packages = [{ include = "leagueintel", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"
click = "*"
loguru = "*"
python-dotenv = "*"
espn-api = "*"
nflreadpy = "*"
polars = "*"
pyarrow = "*"
pandas = "*"
pydantic = "*"
setuptools = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ipykernel = "*"
nbformat = "^5.10.4"

[tool.poetry.group.reporting.dependencies]
streamlit = "*"
plotly = "*"
anthropic = "^0.113.0"
boto3 = "^1.43.38"
libsql-experimental = "^0.0.55"

[tool.poetry.scripts]
leagueintel = "leagueintel.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
